@@ -14,5 +14,3 @@ This file is probably not usable for anybody except me ;-).
     - add support for setting processed flag via API
 
 - add support for acquiring number of messages in sending queue
-
-- add retries to DBI, for example MySQL server can go away, database can be locked...
